<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_show_tracking"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="1"
        android:title="@string/showTracking"/>
    <item
        android:id="@+id/menu_item_face20"
        android:showAsAction="never"
        android:title="@string/face20"/>
    <item
        android:id="@+id/menu_item_face30"
        android:showAsAction="never"
        android:title="@string/face30"/>
    <item
        android:id="@+id/menu_item_face40"
        android:showAsAction="never"
        android:title="@string/face40"/>
    <item
        android:id="@+id/menu_item_face50"
        android:showAsAction="never"
        android:title="@string/face50"/>
</menu>